@@ -14,7 +14,9 @@
 		<article id="post-<?php the_ID(); ?>" <?php post_class(); ?> itemscope="itemscope" itemtype="http://schema.org/BlogPosting">
 			<header class="post-header">
 				<h2 class="post-title" itemprop="headline">
-				<?php echo get_avatar( get_the_author_meta( 'ID' ), 48); ?>
+				<?php if(get_theme_mod('display_avatar', true)) { 
+					echo get_avatar( get_the_author_meta( 'ID' ), 48); 
+				} ?>
 				<a href="<?php the_permalink(); ?>" rel="bookmark"><?php the_title(); ?></a>
 				</h2>
 				<?php pure_post_meta(); ?>
