@@ -3,7 +3,7 @@ Theme Name: Simply Pure
 Theme URI:  http://wpden.net/simply-pure-wordpress-theme/
 Author: Ritesh Sanap
 Author URI: http://wpden.net/
-Version: 1.1
+Version: 1.1.1
 Description: A Personal blogging wordpress theme, made with Yahoo's Pure CSS. Simply Pure is a responsive WordPress theme with Two-columns and 3 widget footer.
 License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
